--- a/styles/style.css
+++ b/styles/style.css
@@ -86,8 +86,15 @@ body {
   border-radius: 8px;
   border: none;
   width: 100%;
-  padding: 15px;
-  margin-top: 28px;
+  padding: 16px 0 14px;
+  margin-top: 29px;
+  display: flex;
+  justify-content: center;
+  gap: 12px;
+}
+
+.icon-cart:before {
+  content: url("../images/icon-cart.svg");
 }
 
 .card__btn:hover {
